--- a/src/main/resources/styles/jfoenixCSS.css
+++ b/src/main/resources/styles/jfoenixCSS.css
@@ -4,6 +4,7 @@
 	-fx-padding: 10;
     -fx-alignment: CENTER;
 	-fx-background-radius: 10;
+	-fx-border-radius:10;
 	-fx-width: 620;
 	-fx-heigh: 420;
 }
@@ -19,12 +20,12 @@
 	 -fx-padding: 10;
 	 -fx-cursor: hand;
 }
-.label
+#label
 {
 	-fx-text-fill: #A8A8A8;
 }
 
-#settingsBTN
+#smallBTN
 {
 
     -fx-alignment: CENTER;
@@ -50,10 +51,26 @@
     -fx-width: 30;
     -fx-heigh: 30;
 }
-
+.lightText
+{
+-fx-text-fill: #A8A8A8;
+}
 .hatbox
 {
   -fx-background-color: #181818;
   -fx-background-radius: 10;
+   -fx-border-radius: 10;
   -fx-spacing: 5;
+}
+
+.listBox
+{
+  -fx-background-color: #282828;
+  -fx-border-color: #282828;
+}
+.gridPane
+{
+    -fx-vgap: 22;
+    -fx-hgap: 22;
+    -fx-padding: 22;
 }
