--- a/src/main/resources/FXMLYTChannelFind.fxml
+++ b/src/main/resources/FXMLYTChannelFind.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.shape.Circle?>
 
-<BorderPane fx:id="borderPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseDragged="#dragged" onMousePressed="#pressed" prefHeight="535.0" prefWidth="803.0" stylesheets="@styles/jfoenixCSS.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.FXMLYTChannelFindController">
+<BorderPane fx:id="borderPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseDragged="#dragged" onMousePressed="#pressed" prefHeight="535.0" prefWidth="803.0" stylesheets="@styles/jfoenixCSS.css" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.FXMLYTChannelFindController">
    <top>
       <HBox nodeOrientation="RIGHT_TO_LEFT" prefHeight="31.0" prefWidth="570.0" styleClass="hatbox" BorderPane.alignment="CENTER">
          <children>
@@ -48,12 +48,12 @@
    <center>
       <AnchorPane fx:id="anchor" prefHeight="468.0" prefWidth="770.0" BorderPane.alignment="CENTER">
          <children>
-            <JFXListView fx:id="channelList" layoutX="456.0" layoutY="14.0" prefHeight="420.0" prefWidth="299.0" styleClass="listBox" AnchorPane.bottomAnchor="50.0" AnchorPane.rightAnchor="28.0" AnchorPane.topAnchor="14.0" />
+            <JFXListView fx:id="channelList" layoutX="456.0" layoutY="14.0" prefHeight="420.0" prefWidth="342.0" styleClass="listBox" AnchorPane.bottomAnchor="50.0" AnchorPane.rightAnchor="12.0" AnchorPane.topAnchor="14.0" />
             <StackPane layoutX="506.0" layoutY="149.0" prefHeight="150.0" prefWidth="200.0" AnchorPane.bottomAnchor="135.0" AnchorPane.rightAnchor="77.0" AnchorPane.topAnchor="149.0">
                <children>
-                  <Circle fx:id="circle1" fill="#2197ff00" radius="90.0" stroke="#c3c9cddb" strokeLineCap="ROUND" strokeType="INSIDE" strokeWidth="7.0" style="-fx-stroke-dash-array: 35;" />
                   <Circle fx:id="circle2" fill="#2197ff00" radius="60.0" stroke="#c3c9cddb" strokeLineCap="ROUND" strokeType="INSIDE" strokeWidth="7.0" style="-fx-stroke-dash-array: 50;" />
                   <Circle fx:id="circle3" fill="#2197ff00" radius="30.0" stroke="#c3c9cddb" strokeLineCap="ROUND" strokeType="INSIDE" strokeWidth="7.0" style="-fx-stroke-dash-array: 24;" />
+                  <Circle fx:id="circle1" fill="#2197ff00" radius="90.0" stroke="#c3c9cddb" strokeLineCap="ROUND" strokeType="INSIDE" strokeWidth="7.0" style="-fx-stroke-dash-array: 35;" />
                </children>
             </StackPane>
             <JFXTextField fx:id="nickNameField" focusColor="#d5dae8" layoutX="5.0" layoutY="31.0" prefHeight="27.0" prefWidth="393.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="385.0" AnchorPane.topAnchor="31.0" />
@@ -61,32 +61,32 @@
             <JFXButton id="smallBTN" fx:id="chooseBtn" layoutX="686.0" layoutY="452.0" onAction="#chooseBtnClick" prefHeight="27.0" prefWidth="69.0" text="Choose" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="28.0" />
             <JFXButton id="smallBTN" fx:id="cancelBtn" layoutX="374.0" layoutY="70.0" onAction="#cancelBtnClick" text="Cancel" AnchorPane.rightAnchor="360.0" AnchorPane.topAnchor="70.0" />
             <Label alignment="CENTER" contentDisplay="CENTER" layoutX="81.0" layoutY="14.0" prefHeight="13.0" prefWidth="256.0" styleClass="lightText" text="Input chanell name here" textAlignment="CENTER" AnchorPane.leftAnchor="81.0" AnchorPane.topAnchor="14.0" />
-            <ImageView fx:id="channelImage" fitHeight="189.0" fitWidth="230.0" layoutX="14.0" layoutY="114.0" pickOnBounds="true" preserveRatio="true" />
-            <Label fx:id="name" layoutX="243.0" layoutY="114.0" prefHeight="78.0" prefWidth="209.0">
+            <ImageView fx:id="channelImage" fitHeight="189.0" fitWidth="230.0" layoutX="14.0" layoutY="114.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="181.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="539.0" AnchorPane.topAnchor="114.0" />
+            <Label fx:id="name" layoutX="243.0" layoutY="114.0" prefHeight="78.0" prefWidth="184.0" AnchorPane.bottomAnchor="292.0" AnchorPane.leftAnchor="243.0" AnchorPane.rightAnchor="356.0" AnchorPane.topAnchor="114.0">
                <styleClass>
                   <String fx:value="detailInfoLabel" />
                   <String fx:value="lightText" />
                </styleClass>
             </Label>
-            <Label fx:id="date" alignment="TOP_LEFT" layoutX="252.0" layoutY="192.0" prefHeight="115.0" prefWidth="200.0" text="Date">
+            <Label fx:id="date" alignment="TOP_LEFT" layoutX="243.0" layoutY="203.0" prefHeight="115.0" prefWidth="200.0" AnchorPane.bottomAnchor="203.0" AnchorPane.leftAnchor="243.0" AnchorPane.rightAnchor="356.0" AnchorPane.topAnchor="203.0">
                <styleClass>
                   <String fx:value="lightText" />
                   <String fx:value="detailInfoLabel" />
                </styleClass>
             </Label>
-            <Label fx:id="views" layoutX="14.0" layoutY="433.0" prefHeight="35.0" prefWidth="438.0" text="Views:">
+            <Label fx:id="views" layoutX="14.0" layoutY="433.0" prefHeight="35.0" prefWidth="438.0" AnchorPane.bottomAnchor="16.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="331.0" AnchorPane.topAnchor="433.0">
                <styleClass>
                   <String fx:value="lightText" />
                   <String fx:value="detailInfoLabel" />
                </styleClass>
             </Label>
-            <Label fx:id="videos" layoutX="14.0" layoutY="375.0" prefHeight="35.0" prefWidth="431.0" text="Videos:">
+            <Label fx:id="videos" layoutX="14.0" layoutY="382.0" prefHeight="35.0" prefWidth="431.0" AnchorPane.bottomAnchor="67.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="331.0" AnchorPane.topAnchor="382.0">
                <styleClass>
                   <String fx:value="lightText" />
                   <String fx:value="detailInfoLabel" />
                </styleClass>
             </Label>
-            <Label fx:id="subs" contentDisplay="TOP" layoutX="14.0" layoutY="325.0" prefHeight="35.0" prefWidth="433.0" text="Subscribers:">
+            <Label fx:id="subs" contentDisplay="TOP" layoutX="14.0" layoutY="325.0" prefHeight="35.0" prefWidth="433.0" AnchorPane.bottomAnchor="124.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="336.0" AnchorPane.topAnchor="325.0">
                <styleClass>
                   <String fx:value="lightText" />
                   <String fx:value="detailInfoLabel" />
