--- a/src/main/resources/FXMLSettings.fxml
+++ b/src/main/resources/FXMLSettings.fxml
@@ -25,7 +25,7 @@
                         <Font size="24.0" />
                      </font>
                   </Label>
-                  <ImageView fitHeight="38.0" fitWidth="50.0" layoutX="14.0" layoutY="6.0" onMouseClicked="#goBack" pickOnBounds="true" preserveRatio="true" styleClass="iconBTN">
+                  <ImageView fitHeight="38.0" fitWidth="50.0" layoutX="14.0" layoutY="6.0" onMouseClicked="#mainMenu" pickOnBounds="true" preserveRatio="true" styleClass="iconBTN">
                      <image>
                         <Image url="@icons/arrow_back.png" />
                      </image>
